tests/NormalTests/paczka1/small_fuzzy/45797600.err
Error in line 7: WBJHUmZe S256 57,7
Error in line 8: WBJHUmZe S620 83,6
